module(
    name = "mini_git",
    version = "1.0",
)

bazel_dep(name = "rules_java", version = "9.0.3")
bazel_dep(name = "rules_jvm_external", version = "6.6")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "info.picocli:picocli:4.7.6",
    ],
)
use_repo(maven, "maven")
